examples/my_project/tests/snapshots/pysnaptest__mocks__test_main_test_use_http_request_call_fn-request@pysnap.snap
---
source: src/mocks.rs
description: "Test File Path: tests/test_main.py"
---
{
  "args": [
    "https://jsonplaceholder.typicode.com/todos/1"
  ],
  "kwargs": {}
}
