examples/my_project/tests/snapshots/pysnaptest__mocks__test_main_test_use_http_request_http_request@pysnap.snap
---
source: src/mocks.rs
description: "Test File Path: tests/test_main.py"
---
{
  "completed": false,
  "id": 1,
  "title": "delectus aut autem",
  "userId": 1
}
